--- a/jual-flm.html
+++ b/jual-flm.html
@@ -371,424 +371,4 @@
         <div class="flex-1">
           <div class="font-semibold leading-tight">FLM Febri Remix</div>
           <div class="text-sm opacity-90">💲 Rp 80.000</div>
-          <div class="mt-2 flex gap-2 items-center">
-            <button data-audio="audio12" class="play-btn px-3 py-2 rounded-xl bg-[#0FFCBE] text-black hover:bg-[#106EBE] hover=text-white transition">▶ Play Preview</button>
-            <a data-buy="febri" href="pembayaran.html?produk=FLM%20Febri%20Remix" class="px-3 py-2 rounded-xl bg-[#106EBE] hover:bg-[#0FFCBE] hover=text-black font-medium transition">🛒 Beli</a>
-          </div>
-          <div class="player-controls-container"></div>
-        </div>
-        <audio id="audio12" src="https://raw.githubusercontent.com/muslihfvnky/Muslih-Fvnky-Market/main/Style%20Febri%20Remix.mp3" preload="metadata"></audio>
-      </li>
-
-      <!-- 13 -->
-      <li data-prod-id="jawa1" class="overlay-card bg-black/60 rounded-2xl p-3 flex gap-3 items-center shadow">
-        <img src="https://i.imgur.com/ghNd4So.jpeg" alt="FLM Jawa Pride" class="w-20 h-20 rounded-xl object-cover flex-shrink-0">
-        <div class="flex-1">
-          <div class="font-semibold leading-tight">FLM Jawa Pride</div>
-          <div class="text-sm opacity-90">💲 Rp 80.000</div>
-          <div class="mt-2 flex gap-2 items-center">
-            <button data-audio="audio13" class="play-btn px-3 py-2 rounded-xl bg-[#0FFCBE] text-black hover:bg-[#106EBE] hover=text-white transition">▶ Play Preview</button>
-            <a data-buy="jawa1" href="pembayaran.html?produk=FLM%20Jawa%20Pride" class="px-3 py-2 rounded-xl bg-[#106EBE] hover:bg-[#0FFCBE] hover=text-black font-medium transition">🛒 Beli</a>
-          </div>
-          <div class="player-controls-container"></div>
-        </div>
-        <audio id="audio13" src="https://raw.githubusercontent.com/muslihfvnky/Muslih-Fvnky-Market/main/Style%20Jawa%20Pride.mp3" preload="metadata"></audio>
-      </li>
-
-      <!-- 14 -->
-      <li data-prod-id="jawa2" class="overlay-card bg-black/60 rounded-2xl p-3 flex gap-3 items-center shadow">
-        <img src="https://i.imgur.com/ghNd4So.jpeg" alt="FLM Jawa Pride V2" class="w-20 h-20 rounded-xl object-cover flex-shrink-0">
-        <div class="flex-1">
-          <div class="font-semibold leading-tight">FLM Jawa Pride V2</div>
-          <div class="text-sm opacity-90">💲 Rp 80.000</div>
-          <div class="mt-2 flex gap-2 items-center">
-            <button data-audio="audio14" class="play-btn px-3 py-2 rounded-xl bg-[#0FFCBE] text-black hover:bg-[#106EBE] hover=text-white transition">▶ Play Preview</button>
-            <a data-buy="jawa2" href="pembayaran.html?produk=FLM%20Jawa%20Pride%20V2" class="px-3 py-2 rounded-xl bg-[#106EBE] hover:bg-[#0FFCBE] hover=text-black font-medium transition">🛒 Beli</a>
-          </div>
-          <div class="player-controls-container"></div>
-        </div>
-        <audio id="audio14" src="https://raw.githubusercontent.com/muslihfvnky/Muslih-Fvnky-Market/main/Style%20Jawa%20Pride%20V2.mp3" preload="metadata"></audio>
-      </li>
-
-      <!-- 15 -->
-      <li data-prod-id="jawa3" class="overlay-card bg-black/60 rounded-2xl p-3 flex gap-3 items-center shadow">
-        <img src="https://i.imgur.com/ghNd4So.jpeg" alt="FLM Jawa Pride V3" class="w-20 h-20 rounded-xl object-cover flex-shrink-0">
-        <div class="flex-1">
-          <div class="font-semibold leading-tight">FLM Jawa Pride V3</div>
-          <div class="text-sm opacity-90">💲 Rp 80.000</div>
-          <div class="mt-2 flex gap-2 items-center">
-            <button data-audio="audio15" class="play-btn px-3 py-2 rounded-xl bg-[#0FFCBE] text-black hover:bg-[#106EBE] hover=text-white transition">▶ Play Preview</button>
-            <a data-buy="jawa3" href="pembayaran.html?produk=FLM%20Jawa%20Pride%20V3" class="px-3 py-2 rounded-xl bg-[#106EBE] hover:bg-[#0FFCBE] hover=text-black font-medium transition">🛒 Beli</a>
-          </div>
-          <div class="player-controls-container"></div>
-        </div>
-        <audio id="audio15" src="https://raw.githubusercontent.com/muslihfvnky/Muslih-Fvnky-Market/main/Style%20Jawa%20Pride%20V3.mp3" preload="metadata"></audio>
-      </li>
-
-      <!-- 16 -->
-      <li data-prod-id="jdm" class="overlay-card bg-black/60 rounded-2xl p-3 flex gap-3 items-center shadow">
-        <img src="https://i.imgur.com/ghNd4So.jpeg" alt="FLM JDM KT" class="w-20 h-20 rounded-xl object-cover flex-shrink-0">
-        <div class="flex-1">
-          <div class="font-semibold leading-tight">FLM JDM KT</div>
-          <div class="text-sm opacity-90">💲 Rp 109.000</div>
-          <div class="mt-2 flex gap-2 items-center">
-            <button data-audio="audio16" class="play-btn px-3 py-2 rounded-xl bg-[#0FFCBE] text-black hover:bg-[#106EBE] hover=text-white transition">▶ Play Preview</button>
-            <a data-buy="jdm" href="pembayaran.html?produk=FLM%20JDM%20KT" class="px-3 py-2 rounded-xl bg-[#106EBE] hover:bg-[#0FFCBE] hover=text-black font-medium transition">🛒 Beli</a>
-          </div>
-          <div class="player-controls-container"></div>
-        </div>
-        <audio id="audio16" src="https://raw.githubusercontent.com/muslihfvnky/Muslih-Fvnky-Market/main/Style%20JDM%20KT.mp3" preload="metadata"></audio>
-      </li>
-
-      <!-- 17 -->
-      <li data-prod-id="epamold" class="overlay-card bg-black/60 rounded-2xl p-3 flex gap-3 items-center shadow">
-        <img src="https://i.imgur.com/ghNd4So.jpeg" alt="FLM EPAM ESTETOD OLD" class="w-20 h-20 rounded-xl object-cover flex-shrink-0">
-        <div class="flex-1">
-          <div class="font-semibold leading-tight">FLM EPAM ESTETOD OLD</div>
-          <div class="text-sm opacity-90">💲 Rp 79.000</div>
-          <div class="mt-2 flex gap-2 items-center">
-            <button data-audio="audio17" class="play-btn px-3 py-2 rounded-xl bg-[#0FFCBE] text-black hover:bg-[#106EBE] hover=text-white transition">▶ Play Preview</button>
-            <a data-buy="epamold" href="pembayaran.html?produk=FLM%20EPAM%20ESTETOD%20OLD" class="px-3 py-2 rounded-xl bg-[#106EBE] hover:bg-[#0FFCBE] hover=text-black font-medium transition">🛒 Beli</a>
-          </div>
-          <div class="player-controls-container"></div>
-        </div>
-        <audio id="audio17" src="https://raw.githubusercontent.com/muslihfvnky/Muslih-Fvnky-Market/main/epamold.mp3" preload="metadata"></audio>
-      </li>
-
-    </ul>
-  </main>
-
-  <footer class="max-w-5xl mx-auto mt-10 text-xs text-gray-300 border-t border-[#0FFCBE] pt-4 bg-black/50 p-2 rounded">
-    © 2025 Muslih Fvnky Shop. All rights reserved.
-  </footer>
-
-  <script>
-    // === durationMap: durasi yang kamu kirim (detik) ===
-    const durationMap = {
-      audio1: 51,
-      audio2: 23,
-      // audio3 (Request) preview dihapus
-      audio4: 13,
-      audio5: 69,
-      audio6: 60,
-      audio7: 30,
-      audio8: 37,
-      audio9: 59,
-      audio10: 51,
-      audio11: 49,
-      audio12: 53,
-      audio13: 44,
-      audio14: 46,
-      audio15: 28,
-      audio16: 83,
-      audio17: 46
-    };
-
-    // Helper: format seconds -> mm:ss
-    function formatTime(sec) {
-      if (isNaN(sec) || sec === Infinity) return '0:00';
-      const m = Math.floor(sec / 60);
-      const s = Math.floor(sec % 60);
-      return m + ':' + (s < 10 ? '0' + s : s);
-    }
-
-    // Create player controls markup inside container for each card
-    function createControls(container, audio) {
-      // if already exists return it
-      let existing = container.querySelector('.player-controls');
-      if (existing) return existing;
-
-      const controls = document.createElement('div');
-      controls.className = 'player-controls';
-      controls.innerHTML = `
-        <button class="skip-btn" data-skip="-3" title="Mundur 3 detik">3s</button>
-        <span class="time current">0:00</span>
-        <input type="range" class="progress" min="0" max="100" value="0" step="0.1">
-        <span class="time duration">0:00</span>
-        <button class="skip-btn" data-skip="3" title="Maju 3 detik">3s</button>
-      `;
-      container.appendChild(controls);
-
-      const progress = controls.querySelector('.progress');
-      const currentTimeEl = controls.querySelector('.current');
-      const durationEl = controls.querySelector('.duration');
-      const skipButtons = controls.querySelectorAll('.skip-btn');
-
-      // If we have a known duration from durationMap, use it immediately
-      const known = durationMap[audio.id];
-      if (known && typeof known === 'number' && known > 0) {
-        durationEl.textContent = formatTime(known);
-        progress.max = known;
-        // set initial background to 0%
-        progress.style.background = `linear-gradient(90deg, #0FFCBE 0%, rgba(255,255,255,0.12) 0%)`;
-      }
-
-      // when metadata loaded, if we didn't have known duration, use audio.duration
-      audio.addEventListener('loadedmetadata', () => {
-        if (!known || isNaN(known)) {
-          if (!isNaN(audio.duration) && audio.duration > 0) {
-            durationEl.textContent = formatTime(audio.duration);
-            progress.max = audio.duration;
-          }
-        } else {
-          progress.max = known;
-        }
-      });
-
-      // update on timeupdate
-      audio.addEventListener('timeupdate', () => {
-        if (!isNaN(audio.currentTime)) {
-          const total = (known && !isNaN(known)) ? known : (isNaN(audio.duration) ? 0 : audio.duration);
-          const current = Math.min(audio.currentTime, total || audio.currentTime);
-          progress.value = current;
-          const pct = (total > 0) ? (current / total) * 100 : 0;
-          progress.style.background = `linear-gradient(90deg, #0FFCBE ${pct}%, rgba(255,255,255,0.12) ${pct}%)`;
-          currentTimeEl.textContent = formatTime(current);
-        }
-      });
-
-      // when ended reset UI
-      audio.addEventListener('ended', () => {
-        progress.value = 0;
-        currentTimeEl.textContent = '0:00';
-        progress.style.background = `linear-gradient(90deg, #0FFCBE 0%, rgba(255,255,255,0.12) 0%)`;
-      });
-
-      // Seek on input (works for mobile touch and mouse)
-      progress.addEventListener('input', (e) => {
-        const val = parseFloat(e.target.value);
-        const total = (known && !isNaN(known)) ? known : (isNaN(audio.duration) ? null : audio.duration);
-        if (total !== null) {
-          const newTime = Math.max(0, Math.min(total, val));
-          audio.currentTime = newTime;
-          currentTimeEl.textContent = formatTime(newTime);
-          const pct = (total > 0) ? (newTime / total) * 100 : 0;
-          progress.style.background = `linear-gradient(90deg, #0FFCBE ${pct}%, rgba(255,255,255,0.12) ${pct}%)`;
-        } else {
-          audio.currentTime = val;
-          currentTimeEl.textContent = formatTime(val);
-        }
-      });
-
-      // Skip buttons (±3s)
-      skipButtons.forEach(btn => {
-        btn.addEventListener('click', (e) => {
-          const skip = parseFloat(btn.getAttribute('data-skip')) || 0;
-          if (isNaN(skip) || skip === 0) return;
-          const total = (known && !isNaN(known)) ? known : (isNaN(audio.duration) ? null : audio.duration);
-          let newTime = audio.currentTime + skip;
-          if (total !== null) {
-            newTime = Math.max(0, Math.min(total, newTime));
-          } else {
-            newTime = Math.max(0, newTime);
-          }
-          audio.currentTime = newTime;
-          progress.value = newTime;
-          currentTimeEl.textContent = formatTime(newTime);
-          const pct = (total && total > 0) ? (newTime / total) * 100 : 0;
-          progress.style.background = `linear-gradient(90deg, #0FFCBE ${pct}%, rgba(255,255,255,0.12) ${pct}%)`;
-        });
-      });
-
-      return controls;
-    }
-
-    // Utility to pause all audios except the one provided
-    function pauseOthers(exceptAudio) {
-      const audios = document.querySelectorAll('audio');
-      audios.forEach(a => {
-        if (a !== exceptAudio) {
-          a.pause();
-        }
-      });
-      document.querySelectorAll('.play-btn').forEach(btn => {
-        const targetId = btn.getAttribute('data-audio');
-        if (!exceptAudio || targetId !== exceptAudio.id) {
-          btn.textContent = '▶ Play Preview';
-        }
-      });
-    }
-
-    // --------------------
-    // POPULARITY STORAGE
-    // --------------------
-    const POP_KEY = 'mf_popularity_v1'; // localStorage key
-    function loadPopularity(){
-      try {
-        return JSON.parse(localStorage.getItem(POP_KEY) || '{}');
-      } catch(e){ return {}; }
-    }
-    function savePopularity(obj){
-      localStorage.setItem(POP_KEY, JSON.stringify(obj));
-    }
-    function incrementPopularity(prodId, amount = 1){
-      if (!prodId) return;
-      const obj = loadPopularity();
-      obj[prodId] = (obj[prodId] || 0) + amount;
-      savePopularity(obj);
-      renderPopular(); // update UI immediately
-    }
-
-    // Render top-N popular items from produk-grid
-    function renderPopular(n=5){
-      const grid = document.getElementById('popular-grid');
-      if (!grid) return;
-      const items = Array.from(document.querySelectorAll('#produk-grid > li'));
-      const pop = loadPopularity();
-
-      // build list with metadata
-      const mapped = items.map(li => {
-        const id = li.getAttribute('data-prod-id') || '';
-        const title = li.querySelector('.font-semibold')?.textContent?.trim() || 'Produk';
-        const price = li.querySelector('.text-sm')?.textContent || '';
-        const img = li.querySelector('img')?.src || '';
-        const count = pop[id] || 0;
-        return { id, title, price, img, count, li };
-      });
-
-      // sort by count desc, then fallback to original order
-      mapped.sort((a,b) => {
-        if ((b.count - a.count) !== 0) return b.count - a.count;
-        return 0;
-      });
-
-      // pick top n (if none have >0, still show first n)
-      let top = mapped.slice(0, Math.min(n, mapped.length));
-      // ensure top is top by count already due to sort
-
-      // render
-      grid.innerHTML = '';
-      top.forEach(item => {
-        const card = document.createElement('div');
-        card.className = 'popular-card';
-        card.innerHTML = `
-          <img src="${item.img}" alt="${escapeHtml(item.title)}">
-          <div class="popular-meta">
-            <div style="display:flex;gap:8px;align-items:center">
-              <div class="title">${escapeHtml(item.title)}</div>
-              <div style="margin-left:auto"><span class="popular-badge">POP</span></div>
-            </div>
-            <div class="price">${escapeHtml(item.price)}</div>
-            <div class="count">Pembelian: <strong>${item.count}</strong></div>
-            <div style="margin-top:8px">
-              <a href="pembayaran.html?produk=${encodeURIComponent(item.title)}" class="px-2 py-1 rounded-md bg-[#106EBE] text-sm inline-block">🛒 Beli</a>
-              <button data-preview="${item.li.querySelector('audio')?.id || ''}" class="px-2 py-1 ml-2 rounded-md bg-[#0FFCBE] text-sm text-black">▶ Preview</button>
-            </div>
-          </div>
-        `;
-        grid.appendChild(card);
-      });
-    }
-
-    function escapeHtml(s){
-      return (''+s).replace(/[&<>"']/g, (m)=>({ '&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;' })[m]);
-    }
-
-    // --------------------
-    // PLAY-BTN & BUY interaction wiring
-    // --------------------
-    document.querySelectorAll('.play-btn').forEach(btn => {
-      btn.addEventListener('click', async function () {
-        const audioId = btn.getAttribute('data-audio');
-        const audio = document.getElementById(audioId);
-        if (!audio) return;
-
-        // NOTE: play **NO LONGER** increments popularity (per request)
-
-        // Determine container to place controls (closest .player-controls-container)
-        const container = btn.closest('li')?.querySelector('.player-controls-container') || btn.closest('div')?.querySelector('.player-controls-container');
-        if (!container) return;
-
-        // create controls if not exist
-        createControls(container, audio);
-
-        // pause other audios
-        pauseOthers(audio);
-
-        // toggle play/pause
-        if (audio.paused) {
-          try {
-            await audio.play();
-            btn.textContent = '⏸ Pause Preview';
-          } catch (err) {
-            console.warn('play failed', err);
-            alert('Audio tidak bisa diputar otomatis. Silakan tekan lagi untuk memulai.');
-            return;
-          }
-        } else {
-          audio.pause();
-          btn.textContent = '▶ Play Preview';
-        }
-
-        // ensure controls reflect state (in case metadata was loaded after play)
-        const controls = container.querySelector('.player-controls');
-        const progress = controls.querySelector('.progress');
-
-        // when audio ends -> reset button
-        audio.onended = () => {
-          btn.textContent = '▶ Play Preview';
-          progress.value = 0;
-          progress.style.background = `linear-gradient(90deg, #0FFCBE 0%, rgba(255,255,255,0.12) 0%)`;
-        };
-      });
-    });
-
-    // buy links: increment popularity (only buy increases popularity now)
-    document.querySelectorAll('a[data-buy]').forEach(a => {
-      a.addEventListener('click', (e) => {
-        const id = a.getAttribute('data-buy');
-        if (id) {
-          incrementPopularity(id, 2); // heavier weight for beli
-        }
-        // let link continue (no preventDefault) so user goes to pembayaran
-      });
-    });
-
-    // preview buttons in popular section (delegated dynamic)
-    document.getElementById('popular-grid').addEventListener('click', (e) => {
-      const pb = e.target.closest('button[data-preview]');
-      if (!pb) return;
-      const aid = pb.getAttribute('data-preview');
-      if (!aid) return;
-      const audio = document.getElementById(aid);
-      if (!audio) return;
-      // find associated play button and trigger click (which will NOT increment)
-      const originBtn = document.querySelector(`.play-btn[data-audio="${aid}"]`);
-      if (originBtn) originBtn.click();
-    });
-
-    // when DOM ready
-    document.addEventListener('DOMContentLoaded', () => {
-      // ensure default starting popularity (only set when missing)
-      const defaults = { rully: 3, maman: 1 }; // rully = 3 purchases, maman = 1 purchase
-      const pop = loadPopularity();
-      let changed = false;
-      for (const k in defaults) {
-        if (!Object.prototype.hasOwnProperty.call(pop, k)) {
-          pop[k] = defaults[k];
-          changed = true;
-        }
-      }
-      if (changed) savePopularity(pop);
-
-      renderPopular(5);
-      // Re-render every 20s in case other tab changed localStorage
-      setInterval(renderPopular, 20000);
-    });
-
-    // Optional: listen to storage events (update across tabs)
-    window.addEventListener('storage', (e) => {
-      if (e.key === POP_KEY) renderPopular();
-    });
-
-    // Optional: stop all audio when leaving page or switching tab (helps mobile)
-    document.addEventListener('visibilitychange', () => {
-      if (document.hidden) {
-        document.querySelectorAll('audio').forEach(a => a.pause());
-        document.querySelectorAll('.play-btn').forEach(b => b.textContent = '▶ Play Preview');
-      }
-    });
-  </script>
-</body>
-</html>
-```0
+          <div class=
