--- a/jual-flm.html
+++ b/jual-flm.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Muslih Fvnky Shop – Daftar FLM</title>
 
-  <!-- ======= SEO & Social ======= -->
+  <!-- ======= SEO & Social (ditambahkan tanpa menghapus konten lain) ======= -->
   <meta name="description" content="Daftar FLM (projek FL Studio Mobile) dari Muslih Fvnky Shop — lengkap dengan preview, harga, dan tombol pembelian. FLM siap diimport ke FL Studio Mobile. Hubungi WA untuk bantuan.">
   <meta name="keywords" content="FLM, FL Studio Mobile, Jual FLM, Projek FLM, Muslih Fvnky Shop, Beat, Musik, Beli FLM" />
   <meta name="author" content="Muslih Fvnky" />
@@ -24,7 +24,7 @@
   <meta name="twitter:title" content="Muslih Fvnky Shop – Daftar FLM" />
   <meta name="twitter:description" content="Daftar FLM (projek FL Studio Mobile) — preview & harga tersedia. Hubungi WA untuk pembelian." />
   <meta name="twitter:image" content="https://i.imgur.com/ghNd4So.jpeg" />
-  <!-- ========================= -->
+  <!-- =================================================================== -->
 
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
@@ -93,6 +93,7 @@
       outline: none;
       cursor: pointer;
     }
+    /* track in Firefox */
     .player-controls .progress::-moz-range-track {
       height: 8px;
       border-radius: 999px;
@@ -177,16 +178,15 @@
 
   <main class="max-w-5xl mx-auto">
 
-    <!-- POPULAR SECTION (baru) -->
+    <!-- POPULAR SECTION -->
     <section id="popular-section" class="mb-6">
       <div class="flex items-center justify-between mb-3">
         <h2 class="text-xl font-bold">🔥 Produk Populer</h2>
-        <!-- keterangan "Berdasarkan interaksi pengunjung" dihapus -->
+        <!-- intentionally left blank per request -->
       </div>
       <div id="popular-grid" aria-live="polite">
         <!-- akan di-render oleh JS -->
       </div>
-      <!-- TIP dihapus sesuai permintaan -->
     </section>
 
     <!-- SECTION KHUSUS: REQUEST FLM -->
@@ -211,7 +211,7 @@
 
     <!-- GRID CARD PRODUK -->
     <ul id="produk-grid" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-2 gap-4">
-
+      <!-- NOTE: setiap <li> sekarang punya data-prod-id untuk identifikasi -->
       <!-- 1 -->
       <li data-prod-id="rully" class="overlay-card bg-black/60 rounded-2xl p-3 flex gap-3 items-center shadow">
         <img src="https://i.imgur.com/ghNd4So.jpeg" alt="FLM RULLY FVNKY" class="w-20 h-20 rounded-xl object-cover flex-shrink-0">
@@ -464,6 +464,7 @@
     const durationMap = {
       audio1: 51,
       audio2: 23,
+      // audio3 (Request) preview dihapus
       audio4: 13,
       audio5: 69,
       audio6: 60,
@@ -480,6 +481,7 @@
       audio17: 46
     };
 
+    // Helper: format seconds -> mm:ss
     function formatTime(sec) {
       if (isNaN(sec) || sec === Infinity) return '0:00';
       const m = Math.floor(sec / 60);
@@ -487,7 +489,9 @@
       return m + ':' + (s < 10 ? '0' + s : s);
     }
 
+    // Create player controls markup inside container for each card
     function createControls(container, audio) {
+      // if already exists return it
       let existing = container.querySelector('.player-controls');
       if (existing) return existing;
 
@@ -507,13 +511,16 @@
       const durationEl = controls.querySelector('.duration');
       const skipButtons = controls.querySelectorAll('.skip-btn');
 
+      // If we have a known duration from durationMap, use it immediately
       const known = durationMap[audio.id];
       if (known && typeof known === 'number' && known > 0) {
         durationEl.textContent = formatTime(known);
         progress.max = known;
+        // set initial background to 0%
         progress.style.background = `linear-gradient(90deg, #0FFCBE 0%, rgba(255,255,255,0.12) 0%)`;
       }
 
+      // when metadata loaded, if we didn't have known duration, use audio.duration
       audio.addEventListener('loadedmetadata', () => {
         if (!known || isNaN(known)) {
           if (!isNaN(audio.duration) && audio.duration > 0) {
@@ -525,6 +532,7 @@
         }
       });
 
+      // update on timeupdate
       audio.addEventListener('timeupdate', () => {
         if (!isNaN(audio.currentTime)) {
           const total = (known && !isNaN(known)) ? known : (isNaN(audio.duration) ? 0 : audio.duration);
@@ -536,12 +544,14 @@
         }
       });
 
+      // when ended reset UI
       audio.addEventListener('ended', () => {
         progress.value = 0;
         currentTimeEl.textContent = '0:00';
         progress.style.background = `linear-gradient(90deg, #0FFCBE 0%, rgba(255,255,255,0.12) 0%)`;
       });
 
+      // Seek on input (works for mobile touch and mouse)
       progress.addEventListener('input', (e) => {
         const val = parseFloat(e.target.value);
         const total = (known && !isNaN(known)) ? known : (isNaN(audio.duration) ? null : audio.duration);
@@ -557,6 +567,7 @@
         }
       });
 
+      // Skip buttons (±3s)
       skipButtons.forEach(btn => {
         btn.addEventListener('click', (e) => {
           const skip = parseFloat(btn.getAttribute('data-skip')) || 0;
@@ -579,10 +590,13 @@
       return controls;
     }
 
+    // Utility to pause all audios except the one provided
     function pauseOthers(exceptAudio) {
       const audios = document.querySelectorAll('audio');
       audios.forEach(a => {
-        if (a !== exceptAudio) a.pause();
+        if (a !== exceptAudio) {
+          a.pause();
+        }
       });
       document.querySelectorAll('.play-btn').forEach(btn => {
         const targetId = btn.getAttribute('data-audio');
@@ -596,14 +610,18 @@
     // POPULARITY STORAGE
     // --------------------
     const POP_KEY = 'mf_popularity_v1'; // localStorage key
+
     function loadPopularity(){
       try {
         return JSON.parse(localStorage.getItem(POP_KEY) || '{}');
       } catch(e){ return {}; }
     }
+
     function savePopularity(obj){
       localStorage.setItem(POP_KEY, JSON.stringify(obj));
     }
+
+    // incrementPopularity now uses amount default 1 (per request)
     function incrementPopularity(prodId, amount = 1){
       if (!prodId) return;
       const obj = loadPopularity();
@@ -612,33 +630,45 @@
       renderPopular(); // update UI immediately
     }
 
-    // Render top-N popular items from produk-grid
-    function renderPopular(n=5){
+    // Render popular grid — fixed to show Rully then Maman (if exist)
+    function renderPopular(n = 5){
       const grid = document.getElementById('popular-grid');
       if (!grid) return;
-      const items = Array.from(document.querySelectorAll('#produk-grid > li'));
       const pop = loadPopularity();
+      // Grab source items from produk-grid by prod-id
+      const getItem = (id) => {
+        const li = document.querySelector(`#produk-grid > li[data-prod-id="${id}"]`);
+        if (!li) return null;
+        const title = li.querySelector('.font-semibold')?.textContent?.trim() || 'Produk';
+        const price = li.querySelector('.text-sm')?.textContent || '';
+        const img = li.querySelector('img')?.src || '';
+        const count = pop[id] || 0;
+        return { id, title, price, img, count, li };
+      };
 
-      const mapped = items.map(li => {
+      // Order explicitly: first rully then maman, then fill with others by descending count
+      const fixedOrder = ['rully', 'maman'];
+      const fixedItems = fixedOrder.map(getItem).filter(Boolean);
+
+      // Remaining items (exclude fixed ones)
+      const allItems = Array.from(document.querySelectorAll('#produk-grid > li')).map(li => {
         const id = li.getAttribute('data-prod-id') || '';
         const title = li.querySelector('.font-semibold')?.textContent?.trim() || 'Produk';
         const price = li.querySelector('.text-sm')?.textContent || '';
         const img = li.querySelector('img')?.src || '';
         const count = pop[id] || 0;
         return { id, title, price, img, count, li };
-      });
+      }).filter(it => !fixedOrder.includes(it.id));
 
-      // sort by count desc
-      mapped.sort((a,b) => {
-        if ((b.count - a.count) !== 0) return b.count - a.count;
-        return 0;
-      });
+      // sort remaining by count desc
+      allItems.sort((a,b) => b.count - a.count);
 
-      // take top n
-      const top = mapped.slice(0, Math.min(n, mapped.length));
+      // build final list: fixedItems first, then top of allItems until n reached
+      const finalList = [...fixedItems, ...allItems].slice(0, Math.min(n, (fixedItems.length + allItems.length)));
 
+      // render
       grid.innerHTML = '';
-      top.forEach(item => {
+      finalList.forEach(item => {
         const card = document.createElement('div');
         card.className = 'popular-card';
         card.innerHTML = `
@@ -667,20 +697,25 @@
     // --------------------
     // PLAY-BTN & BUY interaction wiring
     // --------------------
+
+    // Play buttons: DO NOT increment popularity (per request)
     document.querySelectorAll('.play-btn').forEach(btn => {
       btn.addEventListener('click', async function () {
         const audioId = btn.getAttribute('data-audio');
         const audio = document.getElementById(audioId);
         if (!audio) return;
 
-        // play NO LONGER increments popularity (per request)
-
+        // Determine container to place controls (closest .player-controls-container)
         const container = btn.closest('li')?.querySelector('.player-controls-container') || btn.closest('div')?.querySelector('.player-controls-container');
         if (!container) return;
 
+        // create controls if not exist
         createControls(container, audio);
+
+        // pause other audios
         pauseOthers(audio);
 
+        // toggle play/pause
         if (audio.paused) {
           try {
             await audio.play();
@@ -695,9 +730,11 @@
           btn.textContent = '▶ Play Preview';
         }
 
+        // ensure controls reflect state (in case metadata was loaded after play)
         const controls = container.querySelector('.player-controls');
         const progress = controls.querySelector('.progress');
 
+        // when audio ends -> reset button
         audio.onended = () => {
           btn.textContent = '▶ Play Preview';
           progress.value = 0;
@@ -706,54 +743,54 @@
       });
     });
 
-    // buy links: increment popularity by 1 (only beli meningkatkan poin sekarang)
+    // Buy links: increment popularity by 1 (per latest request)
     document.querySelectorAll('a[data-buy]').forEach(a => {
       a.addEventListener('click', (e) => {
         const id = a.getAttribute('data-buy');
         if (id) {
-          // setiap klik Beli dianggap 1 pembelian -> tambah 1
-          incrementPopularity(id, 1);
+          incrementPopularity(id, 1); // now 1 point per purchase
         }
-        // link tetap berjalan ke halaman pembayaran
+        // allow navigation to pembayaran.html
       });
     });
 
-    // preview buttons in popular section (delegated dynamic)
+    // preview buttons in popular section (delegated): trigger origin preview (doesn't increment)
     document.getElementById('popular-grid').addEventListener('click', (e) => {
       const pb = e.target.closest('button[data-preview]');
       if (!pb) return;
       const aid = pb.getAttribute('data-preview');
       if (!aid) return;
-      const audio = document.getElementById(aid);
-      if (!audio) return;
       const originBtn = document.querySelector(`.play-btn[data-audio="${aid}"]`);
       if (originBtn) originBtn.click();
     });
 
     // when DOM ready
     document.addEventListener('DOMContentLoaded', () => {
-      // default starting popularity (only set when missing)
-      const defaults = { rully: 7, maman: 5 }; // rully = 7 pembelian, maman = 5 pembelian
+      // ensure default starting popularity (only set when missing)
+      const defaults = { rully: 7, maman: 5 }; // updated defaults per request
       const pop = loadPopularity();
       let changed = false;
       for (const k in defaults) {
         if (!Object.prototype.hasOwnProperty.call(pop, k)) {
           pop[k] = defaults[k];
           changed = true;
+        } else {
+          // if stored but smaller than defaults, keep stored (do not override)
         }
       }
       if (changed) savePopularity(pop);
 
       renderPopular(5);
+      // Re-render every 20s in case other tab changed localStorage
       setInterval(renderPopular, 20000);
     });
 
-    // storage events (sync across tabs)
+    // listen to storage events (update across tabs)
     window.addEventListener('storage', (e) => {
       if (e.key === POP_KEY) renderPopular();
     });
 
-    // pause audio on tab hide
+    // stop all audio when leaving page or switching tab (helps mobile)
     document.addEventListener('visibilitychange', () => {
       if (document.hidden) {
         document.querySelectorAll('audio').forEach(a => a.pause());
