--- a/index.html
+++ b/index.html
@@ -112,22 +112,23 @@
     }
     .glow-btn:hover { background: #0FFCBE; color: black; box-shadow: 0 10px 30px rgba(15,252,190,0.18); transform: translateY(-4px); }
 
-    /* comment special button (different accent) */
+    /* comment special button - updated to match look & color of other buttons */
     .comment-btn {
-      background: linear-gradient(90deg,#f97316,#fb7185);
-      border: 0;
+      transition: all 0.28s ease-in-out;
+      border: 2px solid #0FFCBE;
+      background: rgba(16,110,190,0.8);
+      backdrop-filter: blur(6px);
       color: white;
-      font-weight: 800;
-      padding: .9rem 1rem;
-      border-radius: 12px;
-      text-decoration: none;
       display: inline-block;
       width: 100%;
-      text-align:center;
-      box-shadow: 0 8px 30px rgba(251,113,133,0.14);
-      transition: transform .18s ease, box-shadow .18s ease;
+      text-align: center;
+      padding: .9rem 1rem;
+      font-weight: 700;
+      border-radius: 12px;
+      box-shadow: 0 6px 20px rgba(0,0,0,0.35);
+      text-decoration: none;
     }
-    .comment-btn:hover { transform: translateY(-4px); box-shadow: 0 18px 40px rgba(251,113,133,0.18); color: #000; }
+    .comment-btn:hover { background: #0FFCBE; color: black; box-shadow: 0 10px 30px rgba(15,252,190,0.18); transform: translateY(-4px); }
 
     /* PRIMARY Testimoni button (highlight) */
     .primary-btn {
@@ -175,11 +176,13 @@
       <p class="text-sm text-white/90">Tempat Jual Beli FLM Murah</p>
     </div>
 
-    <!-- quick links (Testimoni + Komentar) -->
+    <!-- quick links (Testimoni + Komentar + Pembayaran) -->
     <div class="header-extra" aria-hidden="false">
       <a href="testimoni.html" class="header-link" title="Lihat Testimoni">📸 Testimoni</a>
       <!-- Komentar link -->
       <a href="coments.html" class="header-link" title="Komentar & Rating">💬 Komentar</a>
+      <!-- Pembayaran link added -->
+      <a href="pembayaran2.html" class="header-link" title="Halaman Pembayaran">💳 Pembayaran</a>
     </div>
   </header>
 
@@ -204,7 +207,10 @@
           <a href="jasa-mixing.html" class="glow-btn">Jasa Mixing & Mastering</a>
           <a href="jasa-chord-dan-bpm.html" class="glow-btn">Jasa Nyusun Chord & BPM</a>
 
-          <!-- Komentar & Rating (diperjelas dengan warna terpisah) -->
+          <!-- Pembayaran button added and points to pembayaran2.html -->
+          <a href="pembayaran2.html" class="glow-btn">💳 Pembayaran</a>
+
+          <!-- Komentar & Rating (style now matches the other buttons) -->
           <div>
             <a href="comments.html" class="comment-btn" aria-label="Buka halaman Komentar & Rating">
               💬 Komentar & Rating
