--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
     <div class="header-extra" aria-hidden="false">
       <a href="testimoni.html" class="header-link" title="Lihat Testimoni">📸 Testimoni</a>
       <!-- Komentar link -->
-      <a href="coments.html" class="header-link" title="Komentar & Rating">💬 Komentar</a>
+      <a href="comments.html" class="header-link" title="Komentar & Rating">💬 Komentar</a>
       <!-- Pembayaran link added -->
       <a href="pembayaran2.html" class="header-link" title="Halaman Pembayaran">💳 Pembayaran</a>
     </div>
