--- a/jual-flm.html
+++ b/jual-flm.html
@@ -340,7 +340,7 @@
           <div class="text-sm opacity-90">💲 Rp 83.000</div>
           <div class="mt-2 flex gap-2 items-center">
             <button data-audio="audio10" class="play-btn px-3 py-2 rounded-xl bg-[#0FFCBE] text-black hover:bg-[#106EBE] hover=text-white transition">▶ Play Preview</button>
-            <a data-buy="angga" href="pembayaran.html?produk=FLM%20Angga%20Fvnky" class="px-3 py-2 rounded-xl bg-[#106EBE] hover:bg-[#0FFCBE] hover=text-black font-medium transition">🛒 Beli</a>
+            <a data-buy="angga" href=epamoldamoldembayaran.html?produk=FLM%20Angga%20Fvnky" class="px-3 py-2 rounded-xl bg-[#106EBE] hover:bg-[#0FFCBE] hover=text-black font-medium transition">🛒 Beli</a>
           </div>
           <div class="player-controls-container"></div>
         </div>
@@ -468,14 +468,14 @@
       </li>
 
       <!-- 19 -->
-      <li data-prod-id="FLM BREAKBEAT SERANA" class="overlay-card bg-black/60 rounded-2xl p-3 flex gap-3 items-center shadow">
+      <li data-prod-id="FLM VELOCITY RADYA VERSION" class="overlay-carderlay-card bg-black/60 rounded-2xl p-3 flex gap-3 items-center shadow">
         <img src="https://i.imgur.com/ghNd4So.jpeg" alt="FLM VELOCITY RADYA VERSION" class="w-20 h-20 rounded-xl object-cover flex-shrink-0">
         <div class="flex-1">
           <div class="font-semibold leading-tight">FLM VELOCITY RADYA VERSION</div>
           <div class="text-sm opacity-90">💲 Rp 110.000</div>
           <div class="mt-2 flex gap-2 items-center">
             <button data-audio="audio19" class="play-btn px-3 py-2 rounded-xl bg-[#0FFCBE] text-black hover:bg-[#106EBE] hover=text-white transition">▶ Play Preview</button>
-            <a data-buy="epamold" href="pembayaran.html?produk=FLM%20VELOCITY%20RADYA%20VERSION" class="px-3 py-2 rounded-xl bg-[#106EBE] hover:bg-[#0FFCBE] hover=text-black font-medium transition">🛒 Beli</a>
+            <a data-buy="FLM VELOCITY RADYA VERSIoverlay-cardmbayaran.html?produk=FLM%20VELOCITY%20RADYA%20VERSION" class="px-3 py-2 rounded-xl bg-[#106EBE] hover:bg-[#0FFCBE] hover=text-black font-medium transition">🛒 Beli</a>
           </div>
           <div class="player-controls-container"></div>
         </div>
