--- a/index.html
+++ b/index.html
@@ -222,6 +222,8 @@
       <a href="comments.html" class="header-link" title="Komentar & Rating">💬 Komentar</a>
       <!-- Pembayaran link added -->
       <a href="pembayaran2.html" class="header-link" title="Halaman Pembayaran">💳 Pembayaran</a>
+      <!-- Blog link (ditambahkan) -->
+      <a href="https://muslihfvnky.blogspot.com/?m=1" class="header-link" title="Kunjungi Blog">📝 Blog</a>
     </div>
   </header>
 
@@ -255,6 +257,9 @@
               💬 Komentar & Rating
             </a>
           </div>
+
+          <!-- Blog button (ditambahkan) -->
+          <a href="https://muslihfvnky.blogspot.com/?m=1" class="glow-btn">📝 Blog</a>
 
           <!-- Primary Testimoni button spans full width -->
           <div style="grid-column: 1 / -1;">
